lab/04-gatekeeper/policies/require-resource-limits/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireresourcelimits
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.memory
          msg := sprintf("컨테이너 '%v'에 memory limits가 설정되지 않았습니다. 리소스 제한을 반드시 설정하세요.", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := sprintf("컨테이너 '%v'에 cpu limits가 설정되지 않았습니다. 리소스 제한을 반드시 설정하세요.", [container.name])
        }
